--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,9 @@ dependencies:
   flutter_svg: ^2.0.16
   http: ^1.2.2
   intl: 
-
+  animated_bottom_navigation_bar: ^1.3.3
+  floating_bottom_bar: ^0.0.3 
+  lottie: ^3.2.0
 
 dev_dependencies:
   flutter_test:
