--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   animated_bottom_navigation_bar: ^1.3.3
   floating_bottom_bar: ^0.0.3 
   lottie: ^3.2.0
+  image_picker: ^1.1.2
+  share_plus: ^10.1.3
 
 dev_dependencies:
   flutter_test:
