--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   lottie: ^3.2.0
   image_picker: ^1.1.2
   share_plus: ^10.1.3
+  mongo_dart: ^0.10.3
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
